# Inter-Process-Communication

./: CMakeLists.txt  README.md
include/: MsgQueue.h  Routing_table.h  SharedMemory.h  Socket.h
src/: Client.cpp  MsgQueue.cpp  Routing_table.cpp  Server.cpp  SharedMemory.cpp  Socket.cpp
